--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Mathematics Game</string>
-    <string name="home_title">Mathematics Game</string>
+    <string name="app_name">Fifteen Twenty</string>
+    <string name="home_title">Fifteen Twenty</string>
     <string name="home_button_play">Play</string>
     <string name="home_button_ranking">Game Ranking</string>
     <string name="home_button_records">Your Records</string>
