--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,11 @@
     <string name="home_button_records">Your Records</string>
     <string name="home_menu_settings">Settings</string>
     <string name="home_menu_close">Close</string>
-    <string name="game_title">Question %1$d</string>
+    <string name="fragment_opponent_title">Choose an Opponent</string>
+    <string name="fragment_game_choices_title">Choices for Round %1$d</string>
+    <string name="fragment_game_choices_button_hand_left">Left Hand</string>
+    <string name="fragment_game_choices_button_hand_right">Right Hand</string>
+    <string name="fragment_game_choices_toast_fetch_opponent_failed">Failed to fetch opponent’s choices: %1$s</string>
     <string name="game_toolbar_exit">Exit to Home</string>
     <string name="game_elapsed">%1$d sec.</string>
     <string name="game_equation" translatable="false">%1$d %2$s %3$d = ?</string>
@@ -15,11 +19,20 @@
     <string name="game_input_product">Product</string>
     <string name="game_input_quotient">Quotient</string>
     <string name="game_button_check">Check Answer</string>
-    <string name="game_button_next">Next Question</string>
+    <string name="game_button_next">Confirm Choices</string>
     <string name="game_exit_title">Confirm Exit?</string>
-    <string name="game_exit_message">The game was not completed. Are you sure you want to return back to home page?</string>
+    <string name="game_exit_message">Do you want to return to the home page? All your progress will be lost!</string>
     <string name="game_exit_yes">Yes</string>
     <string name="game_exit_no">No</string>
+    <string name="fragment_game_round_title">Round %1$d</string>
+    <string name="fragment_game_round_hands_opponent">%1$s’s Hands</string>
+    <string name="fragment_game_round_hands_player">Your Hands</string>
+    <string name="fragment_game_round_guess_opponent">%1$s’s Guess: %2$s</string>
+    <string name="fragment_game_round_guess_player">Your Guess: %1$s</string>
+    <string name="fragment_game_round_result_win">You Win!</string>
+    <string name="fragment_game_round_result_lost">You Lost…</string>
+    <string name="fragment_game_round_button_next">Next Round</string>
+    <string name="fragment_game_round_button_finish">Finish Game</string>
     <string name="ranking_title">Game Ranking</string>
     <string name="ranking_toolbar_back">Back</string>
     <string name="adapter_ranking_text_rank">%1$d.</string>
