--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="home_title">Fifteen Twenty</string>
     <string name="home_button_play">Play</string>
     <string name="home_button_ranking">Game Ranking</string>
-    <string name="home_button_records">Your Records</string>
+    <string name="home_button_records">Game Records</string>
     <string name="home_menu_settings">Settings</string>
     <string name="home_menu_close">Close</string>
     <string name="fragment_opponent_title">Choose an Opponent</string>
@@ -33,10 +33,19 @@
     <string name="fragment_game_round_result_lose">You Lose…</string>
     <string name="fragment_game_round_button_next">Next Round</string>
     <string name="fragment_game_round_button_finish">Finish Game</string>
+    <string name="fragment_records_title">Game Records</string>
     <string name="ranking_title">Game Ranking</string>
     <string name="ranking_toolbar_back">Back</string>
     <string name="adapter_ranking_text_rank">%1$d.</string>
     <string name="adapter_ranking_text_elapsed">%1$d sec.</string>
+    <plurals name="adapter_record_text_result_won">
+        <item quantity="one">You defeated %1$s in %2$s round.</item>
+        <item quantity="other">You defeated %1$s in %2$s rounds.</item>
+    </plurals>
+    <plurals name="adapter_record_text_result_lost">
+        <item quantity="one">You lost to %1$s in %2$d round.</item>
+        <item quantity="other">You lost to %1$s in %2$d rounds.</item>
+    </plurals>
     <string name="toolbar_navigation_back">Back</string>
     <string name="toolbar_navigation_exit">Exit</string>
     <string name="snackbar_action_retry">Retry</string>
