--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,30 +10,25 @@
     <string name="fragment_game_choices_title">Choices for Round %1$d</string>
     <string name="fragment_game_choices_button_hand_left">Left Hand</string>
     <string name="fragment_game_choices_button_hand_right">Right Hand</string>
+    <string name="fragment_game_choices_text_guess">Your Guess</string>
+    <string name="fragment_game_choices_button_next">Confirm Choices</string>
     <string name="fragment_game_choices_error_unknown_host">Unable to connect to the server.</string>
     <string name="fragment_game_choices_error_databind">Received malformed data from server.</string>
-    <string name="game_elapsed">%1$d sec.</string>
-    <string name="game_equation" translatable="false">%1$d %2$s %3$d = ?</string>
-    <string name="game_input_sum">Sum</string>
-    <string name="game_input_difference">Difference</string>
-    <string name="game_input_product">Product</string>
-    <string name="game_input_quotient">Quotient</string>
-    <string name="game_button_check">Check Answer</string>
-    <string name="fragment_game_choices_button_next">Confirm Choices</string>
     <string name="game_exit_title">Confirm Exit?</string>
     <string name="game_exit_message">Do you want to return to the home page? All your progress will be lost!</string>
     <string name="game_exit_yes">Yes</string>
     <string name="game_exit_no">No</string>
     <string name="fragment_game_round_title">Round %1$d</string>
-    <string name="fragment_game_round_hands_opponent">%1$s’s Hands</string>
-    <string name="fragment_game_round_hands_player">Your Hands</string>
-    <string name="fragment_game_round_guess_opponent">%1$s’s Guess: %2$s</string>
-    <string name="fragment_game_round_guess_player">Your Guess: %1$s</string>
-    <string name="fragment_game_round_result_win">You Win!</string>
-    <string name="fragment_game_round_result_lose">You Lose…</string>
+    <string name="fragment_game_round_text_hands_opponent">%1$s’s Hands</string>
+    <string name="fragment_game_round_text_hands_player">Your Hands</string>
+    <string name="fragment_game_round_text_guess_opponent">%1$s’s Guess: %2$s</string>
+    <string name="fragment_game_round_text_guess_player">Your Guess: %1$s</string>
+    <string name="fragment_game_round_text_result_win">You Win!</string>
+    <string name="fragment_game_round_text_result_lose">You Lose…</string>
     <string name="fragment_game_round_button_next">Next Round</string>
     <string name="fragment_game_round_button_finish">Finish Game</string>
     <string name="fragment_records_title">Game Records</string>
+    <string name="fragment_settings_title">Settings</string>
     <string name="ranking_title">Game Ranking</string>
     <string name="ranking_toolbar_back">Back</string>
     <string name="adapter_ranking_text_rank">%1$d.</string>
